--- a/package.json
+++ b/package.json
@@ -24,6 +24,34 @@
   "homepage": "https://github.com/hapjs/electron-boilerplate#readme",
   "devDependencies": {
     "electron": "^1.4.0",
-    "electron-packager": "^8.0.0"  
+    "electron-packager": "^8.0.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "event-emitter": "^0.3.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "finalhandler": "^0.5.0",
+    "hammerjs": "^2.0.8",
+    "html-webpack-plugin": "^2.21.0",
+    "image-webpack-loader": "^1.8.0",
+    "json-loader": "^0.5.4",
+    "promise-loader": "^1.0.0",
+    "real-interval": "0.0.6",
+    "serve-static": "^1.11.1",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.0",
+    "type-of": "^2.0.1",
+    "url-loader": "^0.5.7",
+    "vue": "^1.0.24",
+    "vue-hot-reload-api": "^1.3.3",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.3",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.1"
   }
 }
